# ai-hand-tracking

./: README.md  pyproject.toml
data/: README.md
src/: draw.py  main.py
